--- a/manifest.json
+++ b/manifest.json
@@ -16,12 +16,12 @@
     "persistent": false
   },
   "browser_action": {
-    "default_icon": "icon.png"
+    "default_icon": "icon/icon.png"
     },
     "icons": {
-	    "16": "icon.png",
-// 	    "32": "icon32px.png",
-	    "128": "icon128.png"
+	    "16": "icon/icon.png",
+// 	    "32": "icon/icon32px.png",
+	    "128": "icon/icon128.png"
     },
 	"permissions": [
 		"storage",
